argocd/base/server-service-patch.yaml
# Switch to ClusterIP service type to limit access.

apiVersion: v1
kind: Service
metadata:
  name: argocd-server
spec:
  type: ClusterIP
